Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131741

[Reg 6.5.7 -> 6.8.0][iOS] QDesktopServices URL Handler (custom scheme) no longer receives data from external apps

    XMLWordPrintable

Details

    • iOS/tvOS/watchOS
    • 8
    • c81f80581 (dev), 4d6a96bb3 (6.8)
    • Foundation Sprint 121

    Description

      The attached project registers itself as a URL handler for a custom scheme, "foo://", as documented at https://doc.qt.io/qt-6/qdesktopservices.html#ios-and-macos

      In Qt 6.8.0, this URL handler receives URLs opened by the same app, as expected. However, it no longer receives URLs opened by other apps. This prevents QOAuthUriSchemeReplyHandler from completing the authentication.

       

      Steps to reproduce

      1. Build and run the attached project on iOS
      2. Wait 2 seconds until QTimer invokes QDesktopServices::openUrl(QUrl("foo://blub/meh"))
      3. Launch Safari on the same device, and enter "foo://bar/baz" into the address bar

       

      Outcomes

      • (Step #2) The app updates the displayed URL to "foo://blub/meh" (Expected)
      • (Step #3)(Qt 6.5.7) The app updates the displayed URL to "foo://bar/baz" (Expected)
      • (Step #3)(Qt 6.8.0) Nothing happens (Not Expected)

      Attachments

        For Gerrit Dashboard: QTBUG-131741
        # Subject Branch Project Status CR V

        Activity

          People

            vuokko Juha Vuolle
            skoh-qt Sze Howe Koh
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes